--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -346,6 +346,12 @@ p, input, span, a {
   outline: none;
 }
 
+/*----------  Progress bar  ----------*/
+.turbolinks-progress-bar {
+  height: 5px;
+  background-color: #0676B2;
+}
+
 /*----------  Sidebar  ----------*/
 aside.sidebar {
   position: fixed;
@@ -1095,6 +1101,9 @@ div.list_template > ul div.popup_action_template ul li:hover {
 }
 
 /*----------  Profil  ----------*/
+div.container_profil {
+  overflow-y: scroll !important;
+}
 div.container_profil div.settings_menu {
   position: relative;
   padding-top: 0 !important;
@@ -1158,13 +1167,10 @@ div.container_profil h2 {
   color: #444;
   text-align: center;
 }
-div.container_profil form {
-  width: 100%;
-}
-div.container_profil form fieldset button {
+div.container_profil button {
   margin: 0;
 }
-div.container_profil form fieldset div.field {
+div.container_profil div.field {
   padding: 10px 15px;
   width: 100%;
   -moz-box-sizing: border-box;
@@ -1172,26 +1178,34 @@ div.container_profil form fieldset div.field {
   box-sizing: border-box;
   position: relative;
   min-height: 100px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-div.container_profil form fieldset div.field > div:first-child > span {
+div.container_profil div.field::after {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  content: '';
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+div.container_profil div.field > div:first-child > span {
   font-weight: 600;
   color: #000;
   font-size: 19px;
 }
-div.container_profil form fieldset div.field > div:first-child > p {
+div.container_profil div.field > div:first-child > p {
   color: #444;
 }
-div.container_profil form fieldset div.field > div:last-child {
+div.container_profil div.field > div:last-child {
   -webkit-align-items: flex-end;
   align-items: flex-end;
 }
-div.container_profil form fieldset div.field > div:last-child > button {
+div.container_profil div.field > div:last-child > button {
   height: 30px !important;
   min-width: auto !important;
   font-size: 15px !important;
 }
-div.container_profil form fieldset div.info_accordeon {
+div.container_profil div.info_accordeon {
   height: 0px;
   overflow: hidden;
   visibility: hidden;
@@ -1215,32 +1229,30 @@ div.container_profil form fieldset div.info_accordeon {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-div.container_profil form fieldset div.info_accordeon.active {
+div.container_profil div.info_accordeon.active {
   padding-top: 10px;
   padding-bottom: 10px;
   visibility: visible;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-div.container_profil form fieldset div.info_accordeon div.sm_field {
+div.container_profil div.info_accordeon .sm_field {
+  width: 70%;
   margin-bottom: 10px;
 }
-div.container_profil form fieldset div.info_accordeon ul.sm_field {
-  width: 70%;
-}
-div.container_profil form fieldset div.info_accordeon ul.sm_field > li {
-  padding: 10px 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
-}
-div.container_profil form fieldset div.info_accordeon ul.sm_field > li > p {
-  padding: 0 5px;
-}
-div.container_profil form fieldset div.info_accordeon ul.sm_field > li > p > strong > a {
-  text-decoration: none;
-}
-div.container_profil form fieldset div.info_accordeon ul.sm_field > li a {
+div.container_profil div.info_accordeon .sm_field a {
   color: #0676B2;
   font-size: 17px;
+}
+div.container_profil div.info_accordeon ul.sm_field > li {
+  padding: 10px 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.085);
+}
+div.container_profil div.info_accordeon ul.sm_field > li > p {
+  padding: 0 5px;
+}
+div.container_profil div.info_accordeon ul.sm_field > li > p > strong > a {
+  text-decoration: none;
 }
 
 /*----------  Popup Default  ----------*/
